--- a/src/partials/PORTAL/4_novedades/4_1_2.html
+++ b/src/partials/PORTAL/4_novedades/4_1_2.html
@@ -914,8 +914,8 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <p class="text-lg">
-                      Selecciona el nombre de la EPS y luego adjunta el
-                      documento de soporte de la afiliación a la misma.
+                      Selecciona el nombre de tu EPS y luego adjunta el
+                      documento de soporte de tu afiliación.
                     </p>
                   </td>
                 </tr>
@@ -1126,39 +1126,35 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <h6>
-                      Tenga en cuenta las siguientes consideraciones al momento
-                      de subir archivos:
+                      Ten en cuenta las siguientes consideraciones al momento de
+                      subir archivos:
                     </h6>
                     <ul class="items">
                       <li>
                         <p>
-                          Para ingresos o traslados, debe de adjuntar la carta
-                          de la EPS con la afiliación bajo el NIT de ASULADO
+                          Para ingresos o traslados, debes adjuntar la carta de
+                          tu EPS con la afiliación bajo el NIT de ASULADO
                           SEGUROS DE VIDA S.A.
                         </p>
                       </li>
                       <li>
                         <p>
-                          Para retiros debe de adjuntar una carta expresando su
+                          Para retiros, debes adjuntar una carta expresando tu
                           necesidad de retiro de EPS (solo aplica para
                           residentes en el exterior).
                         </p>
                       </li>
                       <li>
-                        <p>
-                          El peso máximo por archivo no debe superar los 5 MB.
-                        </p>
+                        <p>El peso del archivo no debe superar los 5MB.</p>
                       </li>
                       <li>
                         <p>
-                          Los únicos formatos permitidos son PDF, PNG, JPG,
+                          Los únicos formatos permitidos son PDF, PNG, JPG, y
                           JPEG.
                         </p>
                       </li>
                       <li>
-                        <p>
-                          Únicamente se pueden adjuntar máximo un documento.
-                        </p>
+                        <p>Podrás adjuntar máximo un documento.</p>
                       </li>
                     </ul>
                   </td>
@@ -1502,8 +1498,8 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <p class="text-lg">
-                      Adjunta el documento de soporte del retiro de EPS bajo en
-                      los criterios dispuestos.
+                      Adjunta tu documento de soporte de retiro de aporte
+                      voluntario bajo las recomendaciones a continuación.
                     </p>
                   </td>
                 </tr>
@@ -1528,39 +1524,35 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <h6>
-                      Tenga en cuenta las siguientes consideraciones al momento
-                      de subir archivos:
+                      Ten en cuenta las siguientes consideraciones al momento de
+                      subir archivos:
                     </h6>
                     <ul class="items">
                       <li>
                         <p>
-                          Para ingresos o traslados, debe de adjuntar la carta
-                          de la EPS con la afiliación bajo el NIT de ASULADO
+                          Para ingresos o traslados, debes adjuntar la carta de
+                          tu EPS con la afiliación bajo el NIT de ASULADO
                           SEGUROS DE VIDA S.A.
                         </p>
                       </li>
                       <li>
                         <p>
-                          Para retiros debe de adjuntar una carta expresando su
+                          Para retiros, debes adjuntar una carta expresando tu
                           necesidad de retiro de EPS (solo aplica para
                           residentes en el exterior).
                         </p>
                       </li>
                       <li>
-                        <p>
-                          El peso máximo por archivo no debe superar los 5 MB.
-                        </p>
+                        <p>El peso del archivo no debe superar los 5MB.</p>
                       </li>
                       <li>
                         <p>
-                          Los únicos formatos permitidos son PDF, PNG, JPG,
+                          Los únicos formatos permitidos son PDF, PNG, JPG, y
                           JPEG.
                         </p>
                       </li>
                       <li>
-                        <p>
-                          Únicamente se pueden adjuntar máximo un documento.
-                        </p>
+                        <p>Podrás adjuntar máximo un documento.</p>
                       </li>
                     </ul>
                   </td>
