--- a/src/partials/PORTAL/4_novedades/4_1_4.html
+++ b/src/partials/PORTAL/4_novedades/4_1_4.html
@@ -583,8 +583,8 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <p class="text-lg">
-                      Diligencia los campos para actualizar de tu aporte
-                      voluntario
+                      Diligencia todos los campos a continuación para actualizar
+                      los datos de tu aporte voluntario.
                     </p>
                   </td>
                 </tr>
@@ -697,8 +697,8 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <h6>
-                      Tenga en cuenta las siguientes consideraciones al momento
-                      de subir archivos:
+                      Ten en cuenta las siguientes consideraciones al momento de
+                      subir archivos:
                     </h6>
                     <ul class="items">
                       <li>
@@ -708,19 +708,16 @@
                         </p>
                       </li>
                       <li>
-                        <p>
-                          El peso maximo por archivo no debe superar el peso de
-                          5MB.
-                        </p>
+                        <p>El peso del archivo no debe superar los 5 MB.</p>
                       </li>
                       <li>
                         <p>
-                          Los unicos formatos permitidos son pdf, png, jpg,
-                          jpeg.
+                          Los únicos formatos permitidos son PDF, PNG, JPG, y
+                          JPEG.
                         </p>
                       </li>
                       <li>
-                        <p>Unicamente se pueden adjuntar maximo 1 documento.</p>
+                        <p>Podrás adjuntar máximo 1 documento.</p>
                       </li>
                     </ul>
                   </td>
@@ -1073,8 +1070,8 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <h6>
-                      Tenga en cuenta las siguientes consideraciones al momento
-                      de subir archivos:
+                      Ten en cuenta las siguientes consideraciones al momento de
+                      subir archivos:
                     </h6>
                     <ul class="items">
                       <li>
@@ -1084,19 +1081,16 @@
                         </p>
                       </li>
                       <li>
-                        <p>
-                          El peso maximo por archivo no debe superar el peso de
-                          5MB.
-                        </p>
+                        <p>El peso del archivo no debe superar los 5 MB.</p>
                       </li>
                       <li>
                         <p>
-                          Los unicos formatos permitidos son pdf, png, jpg,
-                          jpeg.
+                          Los únicos formatos permitidos son PDF, PNG, JPG, y
+                          JPEG.
                         </p>
                       </li>
                       <li>
-                        <p>Unicamente se pueden adjuntar maximo 1 documento.</p>
+                        <p>Podrás adjuntar máximo 1 documento.</p>
                       </li>
                     </ul>
                   </td>
