--- a/src/partials/PORTAL/4_novedades/4_2_2.html
+++ b/src/partials/PORTAL/4_novedades/4_2_2.html
@@ -501,26 +501,21 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <h6>
-                      Tenga en cuenta las siguientes consideraciones al momento
-                      de subir archivos:
+                      Ten en cuenta las siguientes consideraciones al momento de
+                      subir archivos:
                     </h6>
                     <ul class="items">
                       <li>
-                        <p>
-                          El peso maximo por archivo no debe superar el peso de
-                          5MB.
-                        </p>
+                        <p>El peso del archivo no debe superar los 5 MB.</p>
                       </li>
                       <li>
                         <p>
-                          Los unicos formatos permitidos son pdf, png, jpg,
-                          jpeg.
+                          Los únicos formatos permitidos son PDF, PNG, JPG, y
+                          JPEG.
                         </p>
                       </li>
                       <li>
-                        <p>
-                          Unicamente se pueden adjuntar maximo 5 documentos.
-                        </p>
+                        <p>Podrás adjuntar máximo 5 documentos.</p>
                       </li>
                     </ul>
                   </td>
