Update form layout and include new HTML file for form in 4_novedades_1_4.html

--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -1494,6 +1494,9 @@ body {
   .tab-active {
     @apply bg-transparent bg-gradient-to-b from-white to-transparent;
   }
+  span{
+    @apply inline;
+  }
 }
 #tabs_nov_int {
   ul {
