Banner lusa home

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,22 +4,18 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content">
           <h1>
-            <span class="ban_anim1"
-              >¡Hola, <br /><span style="color: #2752b0">soy Lusa!</span>
+            <span class="ban_anim1" style="font-size: 24px; line-height: 24px; font-weight: 600;">¡Ahora con Lusa también puedes gestionar tu <br /><span style="color: #2752b0">Certificado de Ingresos y Retenciones!</span>
             </span>
           </h1>
           <div>
-            <p class="ban_anim1">
-              A partir de ahora seré tu asistente virtual y te acompañaré, a
-              través de nuestro nuevo chat, a gestionar tus solicitudes
-              relacionadas con:
+            <p class="ban_anim1" >
+              Recuerda que también puedes solicitar: colilla de pago, certificado de pensión y copia de la póliza.
             </p>
-            <p class="dest ban_anim1">
-              <b
-                >Colillas de pago | certificados de pensión | copia de póliza</b
-              >
+            <p class="dest ban_anim1" style="font-style: italic;">
+              <b>¡Escríbele a Lusa y recibe la información de forma fácil y rápida!
+              </b>
             </p>
-            <p>¡Escríbeme!</p>
+            
 
             <!-- <button onclick="startChat()" class="as__button self-start">
               <span>¡Escríbeme!</span>
@@ -32,9 +28,9 @@
           </div>
         </div>
         <div class="as__banner_images">
-          <img src="/assets/images/banner_2_bg.webp" alt="Asulado" />
+        <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
           <img
-            src="/assets/images/chat_bot.webp"
+            src="/assets/images/lusa_banner.webp"
             class="max-w-[800px]"
             alt="Asulado"
           />
