--- a/src/partials/PORTAL/4_novedades/4_1_4.html
+++ b/src/partials/PORTAL/4_novedades/4_1_4.html
@@ -345,7 +345,7 @@
       value="VmpFPSxNakF5TkMwd05TMHdPVlF4T1RvME5Eb3lOaTR3T0RoYSxkVkRCSkszQ2dlZGQ5MlBXU203MnNCWkgtdmNyTVQ4OVhaWG1IcU9tWEh3PSxZV1JqTnpSbQ==" /></span
 ></span>
 
-<hr class="my-8" />
+<div class="divider">01</div>
 <form
   id="pg:fm"
   name="pg:fm"
@@ -805,7 +805,7 @@
   <div id="pg:fm:j_id58"></div>
 </form>
 
-<hr class="my-8" />
+<div class="divider">02</div>
 
 <form
   id="pg:fm"
@@ -1044,8 +1044,9 @@
                 <tr>
                   <td class="data2Col first" colspan="2">
                     <p class="text-lg">
-                      Adjunta el documento de soporte del retiro de aporte
-                      voluntario bajo en los criterios dispuestos.
+                      Adjunta a continuación el documento que soporte el retiro
+                      de aporte voluntario. Recuerda que debe seguir los
+                      siguientes criterios:
                     </p>
                   </td>
                 </tr>
