--- a/src/partials/PORTAL/4_novedades/4_2_1.html
+++ b/src/partials/PORTAL/4_novedades/4_2_1.html
@@ -271,7 +271,7 @@
       name="com.salesforce.visualforce.ViewStateCSRF"
       value="VmpFPSxNakF5TkMwd05DMHlPRlF5TVRvd016b3lNQzR3TmpoYSxPYmhYbFlBRlRNMVVCZGlMSTZ6WGtVVnJObTJ2M2dZLVNSQnBpaUt2aEYwPSxORFl3WVRCaw==" /></span
 ></span>
-<hr class="border-green-500 my-8" />
+<div class="divider">01</div>
 <form
   id="pg:fm"
   name="pg:fm"
