--- a/src/partials/PORTAL/4_novedades/4_2_2.html
+++ b/src/partials/PORTAL/4_novedades/4_2_2.html
@@ -271,7 +271,7 @@
       name="com.salesforce.visualforce.ViewStateCSRF"
       value="VmpFPSxNakF5TkMwd05DMHlPRlF5TVRveE16bzBOeTQ0TXpSYSxPMFk4NXRtQVMzbG9keV9iNC1ZeEV6dWZHZDlJMlc2NnZ4ZnVVQlNGUUpBPSxORFl5WkRJeQ==" /></span
 ></span>
-<hr class="border-green-500 my-8" />
+<div class="divider">01</div>
 <form
   id="pg:fm"
   name="pg:fm"
