--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2815,7 +2815,12 @@ body {
     }
   }
 }
-
+ul.start-li {
+  @apply w-full pl-8;
+  li {
+    @apply space-x-4 list-image-star-xs;
+  }
+}
 .pa_login {
   @apply w-screen flex md:flex-row flex-col bg-gradient-to-b from-alpha-18 to-[#EEF7FB];
 
