--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -13,6 +13,126 @@
     </div>
   </section>
 
+  <section
+    class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_1.svg)] bg-center bg-contain"
+  >
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4 class="z-20 text-2xl md:text-5xl text-white font-je">
+              <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
+                >WhatsApp</span
+              >
+            </h4>
+            <div class="text-base text-white md:pr-12">
+              <ul class="start-li">
+                <li>
+                  Asegúrate de que el número de contacto sea el mismo que
+                  encuentras en nuestro sitio web oficial.
+                </li>
+                <li>
+                  Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo
+                  desde las tiendas de aplicaciones oficiales (Play Store y App
+                  Store).
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[300px] mx-auto"
+              src="/assets/images/img_tab2_ciber.webp"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section
+    class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_1.svg)] bg-center bg-contain bg-no-repeat"
+  >
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4 class="z-20 text-2xl md:text-5xl text-white font-je">
+              <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
+                >WhatsApp</span
+              >
+            </h4>
+            <div class="text-base text-white md:pl-12">
+              <ul class="start-li">
+                <li>
+                  Asegúrate de que el número de contacto sea el mismo que
+                  encuentras en nuestro sitio web oficial.
+                </li>
+                <li>
+                  Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo
+                  desde las tiendas de aplicaciones oficiales (Play Store y App
+                  Store).
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[300px] mx-auto"
+              src="/assets/images/img_tab2_ciber.webp"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div id="" class="bg-BG-1 as__section">
+    <div class="as__section_wrapper">
+      <div class="compo">
+        <div
+          class="w-fullflex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:px-0 md:py-0 auto-rows-auto"
+        >
+          <div class="col-start-3 col-span-4 row-start-1 row-span-4">
+            <img
+              class="mt-8 max-w-sm z-10 self-center w-full mx-auto md:max-w-[400px]"
+              src="/assets/images/img_tab2_ciber.webp"
+              alt=""
+            />
+          </div>
+          <h4
+            class="-mt-10 z-20 text-3xl md:text-5xl text-white font-je col-start-1 col-span-4 row-start-1 row-span-3 self-end md:mt-0 md:ml-20"
+          >
+            <span class="inline-block rounded-full bg-azul-dark px-3 py-1"
+              >WhatsApp</span
+            >
+          </h4>
+
+          <div
+            class="col-start-3 col-span-2 text-sm text-azul-dark row-start-5 row-span-1 ciber-int"
+          >
+            <ul>
+              <li>
+                Asegúrate de que el número de contacto sea el mismo que
+                encuentras en nuestro sitio web oficial.
+              </li>
+              <li>
+                Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo desde
+                las tiendas de aplicaciones oficiales (Play Store y App Store).
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <section id="as__ciber_t1_slider" class="as__section as__ciber_t2_grid">
     <div class="as__section_wrapper">
       <div class="as__section_content as-ciber">
@@ -58,19 +178,26 @@
               <div>
                 <img src="/assets/images/img-ciber-t2.png" alt="" />
               </div>
-              <h3>Para nuestro canal de <span>WhatsApp:</span> </h3>
+              <h3>Para nuestro canal de <span>WhatsApp:</span></h3>
             </div>
             <ul>
               <li>
-                Asegúrate de que el número de contacto sea el mismo que encuentras en nuestro sitio web oficial.
+                Asegúrate de que el número de contacto sea el mismo que
+                encuentras en nuestro sitio web oficial.
               </li>
               <li>
-                Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo desde las tiendas de aplicaciones oficiales (Play Store y App Store).
+                Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo desde
+                las tiendas de aplicaciones oficiales (Play Store y App Store).
               </li>
               <li>
-                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
+                Evita compartir información que pueda comprometer la seguridad
+                de tus datos e información, como contraseñas, claves o datos
+                bancarios.
               </li>
-              <li>No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.</li>
+              <li>
+                No accedas a enlaces sin estar 100% seguro de que son confiables
+                y provengan de fuentes oficiales.
+              </li>
             </ul>
           </div>
         </div>
@@ -92,10 +219,13 @@
             </div>
             <ul>
               <li>
-                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
+                Evita compartir información que pueda comprometer la seguridad
+                de tus datos e información, como contraseñas, claves o datos
+                bancarios.
               </li>
               <li>
-                No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.
+                No accedas a enlaces sin estar 100% seguro de que son confiables
+                y provengan de fuentes oficiales.
               </li>
             </ul>
           </div>
@@ -114,13 +244,18 @@
             </div>
             <ul>
               <li>
-                Asegúrate de que tu contraseña sea segura: que tenga mínimo 8 caracteres y combine letras mayúsculas y minúsculas, números y caracteres especiales.
+                Asegúrate de que tu contraseña sea segura: que tenga mínimo 8
+                caracteres y combine letras mayúsculas y minúsculas, números y
+                caracteres especiales.
               </li>
               <li>
-                Evita compartir información que pueda comprometer la seguridad de tus datos e información, como contraseñas, claves o datos bancarios.
+                Evita compartir información que pueda comprometer la seguridad
+                de tus datos e información, como contraseñas, claves o datos
+                bancarios.
               </li>
               <li>
-                No accedas a enlaces sin estar 100% seguro de que son confiables y provengan de fuentes oficiales.
+                No accedas a enlaces sin estar 100% seguro de que son confiables
+                y provengan de fuentes oficiales.
               </li>
             </ul>
           </div>
