--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -43,9 +43,7 @@
           <h1>
             <span class="ban_anim1">Bienvenido a</span>
             <b class="ban_anim1">ASULADO</b>
-            <strong class="ban_anim1"
-              >tu aliado en beneficios garantizados</strong
-            >
+            <strong class="ban_anim1">tu aliado en beneficios garantizados</strong>
           </h1>
         </div>
         <div class="as__banner_piso"></div>
