--- a/src/partials/ciber/slide_1.html
+++ b/src/partials/ciber/slide_1.html
@@ -19,20 +19,18 @@
               <span class="inline-block rounded-full bg-azul-dark px-3 py-1"
                 >Tips</span
               >
-              para cuidar <br class="md:block hidden" />y mantener<br
+              para cuidar <br class="md:block hidden" />tu información<br
                 class="md:block hidden"
               />
-              tu
+             en
               <span class="inline-block rounded-full bg-azul-dark px-3 py-1"
-                >ciberseguridad</span
+                >Internet</span
               >
             </h4>
             <p
               class="col-start-2 col-span-2 text-sm text-white row-start-4 row-span-1"
             >
-              En ASULADO, nos preocupamos por el cuidado de tus datos personales
-              en entornos digitales. Por eso, te recomendamos seguir algunos
-              consejos que te ayudarán a mantener segura toda tu información.
+            Te recomendamos seguir algunos consejos que te ayudarán a mantener segura toda tu información en entornos digitales.
             </p>
 
             <div
