--- a/src/partials/ciber/slide_2.html
+++ b/src/partials/ciber/slide_2.html
@@ -19,17 +19,16 @@
             <h4
               class="-mt-10 z-20 text-3xl md:text-[2.5rem] text-azul-norm font-je font-semibold col-start-2 col-span-3 row-start-1 row-span-4 self-center md:mt-0 md:-ml-12 leading-none"
             >
-              Para ingresar a<br class="md:block hidden" />
-              la página web de<br class="md:block hidden" />
-              ASULADO, digita<br class="md:block hidden" />
+              Para ingresar <br class="md:block hidden" />
+              a nuestra<br class="md:block hidden" />
+              página web,digita<br class="md:block hidden" />
               en tu navegador
               <span class="block text-azul-60">www.asulado.com.</span>
             </h4>
             <p
               class="md:-mt-3 col-start-3 col-span-3 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-32 md:mr-32 px-8 py-5 bg-amarillo-light rounded-lg z-10"
             >
-              Evita hacerlo por medio de links o enlaces enviados que no sean
-              oficiales de ASULADO.
+            Evita hacerlo por medio de links o enlaces enviados que no sean oficiales de ASULADO.
             </p>
           </div>
         </div>
