--- a/src/partials/ciber/slide_6.html
+++ b/src/partials/ciber/slide_6.html
@@ -25,12 +25,12 @@
                 class="inline-block rounded-full bg-amarillo-light px-3 py-1 font-light text-lg -ml-10"
                 >Ten en cuenta:</span
               ><br class="md:block hidden" />
-              ASULADO<br class="md:block hidden" />
-              nunca te solicitará<br class="md:block hidden" />
-              por correo electrónico<br class="md:block hidden" />
+              Desde ASULADO nunca<br class="md:block hidden" />
+              te solicitaremos por <br class="md:block hidden" />
+              correo electrónico<br class="md:block hidden" />
               información confidencial<br class="md:block hidden" />
-              o financiera, como claves<br class="md:block hidden" />
-              o códigos de seguridad.
+              como claves o códigos <br class="md:block hidden" />
+              de seguridad.
             </h4>
           </div>
         </div>
