--- a/src/partials/ciber/tab_1.html
+++ b/src/partials/ciber/tab_1.html
@@ -143,15 +143,14 @@
           </div>
           <div class="as__listado_content full">
             <p>
-              La ciberseguridad es una serie de prácticas y métodos para
-              proteger equipos tecnológicos, redes, sistemas o aplicaciones de
-              posibles amenazas o ataques de carácter digital.
+              La ciberseguridad es una serie de prácticas
+              y métodos para proteger equipos tecnológicos, redes, sistemas o aplicaciones de posibles amenazas o ataques de carácter digital.
+              
+               
             </p>
             <p>
-              Se utilizan medidas específicas de seguridad y diferentes
-              herramientas que permiten resguardar los datos y la información
-              almacenadas, con el fin de evitar posibles accesos no deseados a
-              los mismos.
+              Se utilizan medidas específicas de seguridad
+              y diferentes herramientas que permiten resguardar los datos y la información almacenadas, con el fin de evitar posibles accesos no deseados a los mismos.
             </p>
           </div>
         </div>
