--- a/src/partials/ciber/slide_3.html
+++ b/src/partials/ciber/slide_3.html
@@ -18,19 +18,16 @@
             <h4
               class="-mt-10 z-20 text-2xl md:text-[2.5rem] text-azul-norm font-je font-semibold col-start-1 col-span-4 row-start-1 row-span-4 self-center md:mt-0 md:ml-20 leading-none"
             >
-              Cada vez que entres<br class="md:block hidden" />
-              a un sitio web,<br class="md:block hidden" />
-              comprueba que sea<br class="md:block hidden" />
-              <span class="text-white">seguro</span> antes de ingresar<br
-                class="md:block hidden"
-              />
-              cualquier dato personal.<br class="md:block hidden" />
+            Cada que ingreses<br class="md:block hidden" />
+            a un sitio web,<br class="md:block hidden" />
+            <span class="text-white">comprueba</span><br class="md:block hidden" />
+              <span class="text-white">que sea seguro.</span><br class="md:block hidden"/>
+             
             </h4>
             <p
               class="md:-mt-3 col-start-3 col-span-3 text-sm text-azul-dark row-start-4 self-center row-span-2 md:ml-16 md:mr-44 px-8 py-5 bg-amarillo-light rounded-lg z-10"
             >
-              Verifica que el enlace empiece por “https” e incluya el ícono del
-              candado.
+            Antes de ingresar cualquier dato personal, verifica que el enlace empiece por “https” e incluya el ícono del candado.
             </p>
           </div>
         </div>
