--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -3,15 +3,60 @@
     <div class="as__section_wrapper">
       <div class="as__section_content">
         <p>
-          En ASULADO, nuestra prioridad es asegurarnos de que tu experiencia con
-          todos nuestros canales de comunicación sea segura y confiable para ti.
-          Es fundamental que sigas las siguientes recomendaciones para cada uno
-          de ellos, con el fin de mantener tus datos protegidos de posibles
-          amenazas.
+          En ASULADO, <span class="font-semibold">nuestra prioridad es ofrecerte experiencias seguras en nuestros canales de atención.</span>
+
+        </p><br>
+        <p>Sigue las siguientes recomendaciones y mantén tus datos protegidos de posibles amenazas.</p>
+      </div>
+    </div>
+  </section>
+
+  <section  class="bg-[#08c0fd] as__section pt-20 pb-20">
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <p class="text-6xl text-center text-white font-je font-semibold">Nuestros <span class="inline-block rounded-full text-white bg-azul-dark px-3 py-1">canales</span><br class="md:block hidden" />
+          de atención:
+
         </p>
       </div>
     </div>
   </section>
+
+
+  <section
+  class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2.svg)] bg-center bg-contain bg-no-repeat"
+>
+  <div class="as__section_wrapper">
+    <div class="as__section_content">
+      <div
+        class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+      >
+        <div class="w-full md:w-1/2 flex flex-col gap-4">
+          <h4 class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold">
+            Chat web <br class="md:block hidden" />
+            con <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+              >LUSA</span
+            >
+          </h4>
+          <div class="text-base text-white md:pl-12">
+            <ul class="start-li text-azul-norm">
+              <li>
+                Ingresa al chat con Lusa <b>únicamente a través del sitio web oficial</b> de ASULADO (www.asulado.com).
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="w-full md:w-1/2">
+          <img
+            class="max-w-[350px] mx-auto"
+            src="/assets/images/img_tab1_ciber.webp"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <section
     class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_1.svg)] bg-center bg-contain"
@@ -22,7 +67,7 @@
           class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
         >
           <div class="w-full md:w-1/2 flex flex-col gap-4">
-            <h4 class="z-20 text-2xl md:text-5xl text-white font-je">
+            <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
               <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
                 >WhatsApp</span
               >
@@ -54,86 +99,114 @@
   </section>
 
   <section
-    class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_1.svg)] bg-center bg-contain bg-no-repeat"
-  >
-    <div class="as__section_wrapper">
-      <div class="as__section_content">
-        <div
-          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
-        >
-          <div class="w-full md:w-1/2 flex flex-col gap-4">
-            <h4 class="z-20 text-2xl md:text-5xl text-white font-je">
-              <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
-                >WhatsApp</span
-              >
-            </h4>
-            <div class="text-base text-white md:pl-12">
-              <ul class="start-li">
-                <li>
-                  Asegúrate de que el número de contacto sea el mismo que
-                  encuentras en nuestro sitio web oficial.
-                </li>
-                <li>
-                  Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo
-                  desde las tiendas de aplicaciones oficiales (Play Store y App
-                  Store).
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="w-full md:w-1/2">
-            <img
-              class="max-w-[300px] mx-auto"
-              src="/assets/images/img_tab2_ciber.webp"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <div id="" class="bg-BG-1 as__section">
-    <div class="as__section_wrapper">
-      <div class="compo">
-        <div
-          class="w-fullflex flex-col md:inline-grid md:grid-cols-5 md:grid-rows-5 gap-2 py-12 px-16 md:px-0 md:py-0 auto-rows-auto"
-        >
-          <div class="col-start-3 col-span-4 row-start-1 row-span-4">
-            <img
-              class="mt-8 max-w-sm z-10 self-center w-full mx-auto md:max-w-[400px]"
-              src="/assets/images/img_tab2_ciber.webp"
-              alt=""
-            />
-          </div>
-          <h4
-            class="-mt-10 z-20 text-3xl md:text-5xl text-white font-je col-start-1 col-span-4 row-start-1 row-span-3 self-end md:mt-0 md:ml-20"
-          >
-            <span class="inline-block rounded-full bg-azul-dark px-3 py-1"
-              >WhatsApp</span
+  class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2_2.svg)] bg-center bg-contain bg-no-repeat"
+>
+  <div class="as__section_wrapper">
+    <div class="as__section_content">
+      <div
+        class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+      >
+        <div class="w-full md:w-1/2 flex flex-col gap-4">
+          <h4 class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold">
+            Sitio <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+              >WEB</span
             >
           </h4>
-
-          <div
-            class="col-start-3 col-span-2 text-sm text-azul-dark row-start-5 row-span-1 ciber-int"
-          >
-            <ul>
+          <div class="text-base text-white md:pl-12">
+            <ul class="start-li text-azul-norm">
               <li>
-                Asegúrate de que el número de contacto sea el mismo que
-                encuentras en nuestro sitio web oficial.
-              </li>
-              <li>
-                Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo desde
-                las tiendas de aplicaciones oficiales (Play Store y App Store).
+                Asegúrate de que el enlace al que ingresas sea el oficial de ASULADO:  <b>revisa que empiece por https://</b> e incluya un símbolo de candado a la izquierda.
               </li>
             </ul>
           </div>
         </div>
+        <div class="w-full md:w-1/2">
+          <img
+            class="max-w-[300px] mx-auto"
+            src="/assets/images/img_tab3_ciber.webp"
+            alt=""
+          />
+        </div>
       </div>
     </div>
   </div>
+</section>
 
-  <section id="as__ciber_t1_slider" class="as__section as__ciber_t2_grid">
+<section
+class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat"
+>
+<div class="as__section_wrapper">
+  <div class="as__section_content">
+    <div
+      class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
+    >
+      <div class="w-full md:w-1/2 flex flex-col gap-4">
+        <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
+          Portal
+          <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
+            >Transaccional</span
+          >
+        </h4>
+        <div class="text-base text-white md:pr-12">
+          <ul class="start-li">
+            <li>
+              Asegúrate de que tu contraseña sea segura: <b>que tenga mínimo 8 caracteres y combine letras mayúsculas y minúsculas, números y caracteres especiales.</b>
+            </li>
+            <li>
+              Ingresa al Portal Transaccional solo desde el sitio web o links oficiales de ASULADO.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="w-full md:w-1/2">
+        <img
+          class="max-w-[300px] mx-auto"
+          src="/assets/images/img_tab4_ciber.webp"
+          alt=""
+        />
+       
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+
+<section class="bg-[#08c0fd] as__section">
+<div class="as__section_wrapper">
+  <div class="as__section_content">
+    <div class="py-16 w-full mx-auto flex flex-col-reverse md:flex-row  md:justify-between md:items-center">
+      <div class="w-full md:w-1/3 flex flex-col">
+        <div class="text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 ml-28 mb-64">
+          <p>Evita compartir información que pueda comprometer la seguridad de tus datos e información, <span class="font-semibold">contraseñas, claves o datos bancarios.</span> </p>
+        </div>
+      </div>
+      <div class="w-full md:w-1/3">
+        <img
+          class="max-w-[100%] mx-auto "
+          src="/assets/images/img_tab5_ciber.webp"
+          alt=""
+        />
+        <p class="text-6xl text-center text-white font-je font-semibold z-10">Recomendaciones<br class="md:block hidden" />
+          <span class="inline-block rounded-full text-white bg-azul-dark px-3 py-1">generales</span>
+
+        </p>
+      </div>
+      <div class="w-full md:w-1/3 flex flex-col relative -left-10">
+        <div class="text-center text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 mr-28 mb-32">
+          <p>No accedas a enlaces sin estar <span class="font-semibold">100% seguro de que son confiables</span> y provengan de fuentes oficiales.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+ 
+
+ 
+  <!--<section id="as__ciber_t1_slider" class="as__section as__ciber_t2_grid">
     <div class="as__section_wrapper">
       <div class="as__section_content as-ciber">
         <div class="itmes-ciber">
@@ -262,5 +335,5 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 </div>
